--- a/Views/Reports/AdminReportsWindow.xaml
+++ b/Views/Reports/AdminReportsWindow.xaml
@@ -7,21 +7,26 @@
         Title="AdminReportsWindow" Height="450" Width="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Button Grid.Column="0" Grid.Row="0" x:Name="PriceListButton" Content="Прайс-лист" Click="GeneratePriceList"/>
-        <Button Grid.Column="0" Grid.Row="1" x:Name="CategoryReportButton" Content="Отчет по категориям" Click="ViewCategoryReport"/>
-        <Button Grid.Column="0" Grid.Row="2" x:Name="DailyReceiptReportButton" Content="Отчет по поступлению товаров за день" Click="ViewDailyReceiptReport"/>
-        <Button Grid.Column="1" Grid.Row="0" x:Name="IncomingGoodsJournalButton" Content="Журнал поступления товаров" Click="ViewIncomingGoodsJournal"/>
-        <Button Grid.Column="1" Grid.Row="1" x:Name="StockReportButton" Content="Отчет по складу" Click="GenerateStockReport"/>
-        <Button Grid.Column="1" Grid.Row="2" x:Name="ZeroStockButton" Content="Нулевые позиции" Click="ViewZeroStockReport"/>
+        <Button Grid.Column="0" Grid.Row="0" x:Name="PriceListButton" Content="Прайс-лист" Click="GeneratePriceList" />
+        <Button Grid.Column="0" Grid.Row="1" x:Name="CategoryReportButton" Content="Отчет по категориям"
+                Click="ViewCategoryReport" />
+        <Button Grid.Column="0" Grid.Row="2" x:Name="DailyReceiptReportButton"
+                Content="Отчет по поступлению товаров за день" Click="ViewDailyReceiptReport" />
+        <Button Grid.Column="1" Grid.Row="0" x:Name="IncomingGoodsJournalButton" Content="Журнал поступления товаров"
+                Click="ViewIncomingGoodsJournal" />
+        <Button Grid.Column="1" Grid.Row="1" x:Name="StockReportButton" Content="Отчет по складу"
+                Click="GenerateStockReport" />
+        <Button Grid.Column="1" Grid.Row="2" x:Name="ZeroStockButton" Content="Нулевые позиции"
+                Click="ViewZeroStockReport" />
         <Button Grid.Column="0" Grid.Row="3" x:Name="BackButton" Content="Назад" Click="GoToAdmin" Grid.ColumnSpan="2" />
     </Grid>
 </Window>
