--- a/Views/ProductEditor.xaml
+++ b/Views/ProductEditor.xaml
@@ -8,63 +8,63 @@
         Title="ProductEditor" Height="450" Width="1000">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
         <!-- Таблица поставок -->
-        <DataGrid Grid.Column="0" 
-                  Grid.ColumnSpan="2" 
-                  Grid.Row="0" 
-                  Grid.RowSpan="3" 
-                  x:Name="SupplyDataGrid" 
-                  AutoGenerateColumns="False" 
+        <DataGrid Grid.Column="0"
+                  Grid.ColumnSpan="2"
+                  Grid.Row="0"
+                  Grid.RowSpan="3"
+                  x:Name="SupplyDataGrid"
+                  AutoGenerateColumns="False"
                   ItemsSource="{Binding Test}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Дата" 
-                                    Width="200" 
-                                    Binding="{Binding Path=Date, StringFormat=dd.MM.yyyy}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Наименование" 
-                                    Width="300" 
-                                    Binding="{Binding Path=Name}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Ед/изм" 
-                                    Width="200" 
-                                    Binding="{Binding Path=Unit}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Кол-во" 
-                                    Width="100" 
-                                    Binding="{Binding Path=Quantity}"></DataGridTextColumn>
-                <DataGridTextColumn Header="Цена" 
-                                    Width="200" 
-                                    Binding="{Binding Path=Price}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Дата"
+                                    Width="200"
+                                    Binding="{Binding Path=Date, StringFormat=dd.MM.yyyy}" />
+                <DataGridTextColumn Header="Наименование"
+                                    Width="300"
+                                    Binding="{Binding Path=Name}" />
+                <DataGridTextColumn Header="Ед/изм"
+                                    Width="200"
+                                    Binding="{Binding Path=Unit}" />
+                <DataGridTextColumn Header="Кол-во"
+                                    Width="100"
+                                    Binding="{Binding Path=Quantity}" />
+                <DataGridTextColumn Header="Цена"
+                                    Width="200"
+                                    Binding="{Binding Path=Price}" />
             </DataGrid.Columns>
         </DataGrid>
 
         <!-- Кнопка импорта -->
-        <Button Grid.Column="0" 
-                Grid.Row="3" 
-                x:Name="ImportButton" 
-                Content="Ввод списком" 
-                Click="ImportFromExcel"/>
+        <Button Grid.Column="0"
+                Grid.Row="3"
+                x:Name="ImportButton"
+                Content="Ввод списком"
+                Click="ImportFromExcel" />
 
         <!-- Кнопка сохранения -->
-        <Button Grid.Column="1" 
-                Grid.Row="3"  
-                x:Name="SaveButton" 
-                Content="Запись в БД" 
-                Click="SaveToDatabase"/>
+        <Button Grid.Column="1"
+                Grid.Row="3"
+                x:Name="SaveButton"
+                Content="Запись в БД"
+                Click="SaveToDatabase" />
 
         <!-- Кнопка назад -->
-        <Button Grid.Row="2" 
-                Grid.Column="2" 
-                x:Name="BackButton" 
-                Content="Назад" 
+        <Button Grid.Row="2"
+                Grid.Column="2"
+                x:Name="BackButton"
+                Content="Назад"
                 Grid.RowSpan="2" />
     </Grid>
 </Window>
