--- a/Views/Reports/IncomingGoodsJournalWindow.xaml
+++ b/Views/Reports/IncomingGoodsJournalWindow.xaml
@@ -3,22 +3,21 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zoomag"
         mc:Ignorable="d"
         Title="Журнал поступления товаров" Height="450" Width="1100">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
         <DataGrid x:Name="GoodsReceiptsGrid"
@@ -32,16 +31,16 @@
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Дата"
                                     Binding="{Binding Path=SupplyDate, StringFormat=d}"
-                                    Width="100"></DataGridTextColumn>
+                                    Width="100" />
                 <DataGridTextColumn Header="Наименование"
                                     Binding="{Binding Path=ProductName}"
-                                    Width="250"></DataGridTextColumn>
+                                    Width="250" />
                 <DataGridTextColumn Header="Количество"
                                     Binding="{Binding Path=Quantity, StringFormat=N2}"
-                                    Width="80"></DataGridTextColumn>
+                                    Width="80" />
                 <DataGridTextColumn Header="Цена"
                                     Binding="{Binding Path=Price, StringFormat=C2}"
-                                    Width="100"></DataGridTextColumn>
+                                    Width="100" />
                 <!-- Исправленный столбец "Общая сумма" -->
                 <DataGridTextColumn Header="Общая сумма"
                                     Width="120">
@@ -57,13 +56,13 @@
                 FontSize="24"
                 Grid.Row="3"
                 Grid.Column="4"
-                Click="BackButton_Click"></Button>
+                Click="BackButton_Click" />
 
         <Button x:Name="ExportToExcelButton"
                 Content="Вывод в Excel"
                 FontSize="24"
                 Grid.Row="2"
                 Grid.Column="4"
-                Click="ExportToExcel"></Button>
+                Click="ExportToExcel" />
     </Grid>
 </Window>
