--- a/Views/StockWindow.xaml
+++ b/Views/StockWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Zoomag.Views.ProductOverviewWindow"
+﻿<Window x:Class="Zoomag.Views.StockWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="ProductOverviewWindow" Height="450" Width="1010">
+        Title="StockWindow" Height="450" Width="1010">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
