--- a/Views/ProductEditorWindow.xaml
+++ b/Views/ProductEditorWindow.xaml
@@ -1,62 +1,32 @@
 <Window x:Class="Zoomag.Views.ProductEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Редактор товаров" Height="600" Width="900">
+        Title="Редактор товаров" Height="500" Width="900">
     <Grid Margin="15">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <!-- Форма добавления -->
-        <GroupBox Grid.Row="0" Header="Добавить / изменить товар" Padding="10" Margin="0,0,0,10">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/><ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/><ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition/><RowDefinition/><RowDefinition/><RowDefinition/>
-                </Grid.RowDefinitions>
-
-                <TextBlock Text="Наименование:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"/>
-                <TextBox x:Name="NameInput" Grid.Row="0" Grid.Column="1" Margin="5"/>
-
-                <TextBlock Text="Категория:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"/>
-                <ComboBox x:Name="CategorySelector" Grid.Row="1" Grid.Column="1"
-                          DisplayMemberPath="Name" SelectedValuePath="Id" Margin="5"/>
-
-                <TextBlock Text="Ед. изм.:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center"/>
-                <ComboBox x:Name="UnitSelector" Grid.Row="2" Grid.Column="1"
-                          DisplayMemberPath="Name" SelectedValuePath="Id" Margin="5"/>
-
-                <TextBlock Text="Цена:" Grid.Row="3" Grid.Column="0" VerticalAlignment="Center"/>
-                <TextBox x:Name="PriceInput" Grid.Row="3" Grid.Column="1" Margin="5"/>
-
-                <Button x:Name="SaveButton" Content="Сохранить" Grid.Row="0" Grid.Column="2"
-                        Grid.RowSpan="4" VerticalAlignment="Center" Margin="10,0,0,0"
-                        Click="SaveButton_Click"/>
-            </Grid>
-        </GroupBox>
-
-        <!-- Таблица товаров -->
-        <DataGrid x:Name="ProductsGrid" Grid.Row="1"
-                  AutoGenerateColumns="False" CanUserAddRows="False"
-                  SelectionMode="Single" SelectionUnit="FullRow"
-                  SelectedCellsChanged="ProductsGrid_SelectedCellsChanged">
+        <DataGrid x:Name="ProductsGrid" Grid.Row="0"
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False"
+                  IsReadOnly="True"
+                  SelectionMode="Single"
+                  SelectionUnit="FullRow">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="50"/>
                 <DataGridTextColumn Header="Наименование" Binding="{Binding Name}" Width="200"/>
                 <DataGridTextColumn Header="Категория" Binding="{Binding Category.Name}" Width="150"/>
                 <DataGridTextColumn Header="Ед. изм." Binding="{Binding Unit.Name}" Width="100"/>
                 <DataGridTextColumn Header="Цена" Binding="{Binding Price}" Width="80"/>
-                <DataGridTextColumn Header="Остаток" Binding="{Binding Amount}" Width="80"/>
             </DataGrid.Columns>
         </DataGrid>
 
         <!-- Кнопки управления -->
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+            <Button Content="Новый товар" Click="NewProductButton_Click" Margin="0,0,10,0"/>
+            <Button Content="Редактировать" Click="EditProductButton_Click" Margin="0,0,10,0"/>
             <Button Content="Удалить" Click="DeleteButton_Click" Margin="0,0,10,0"/>
             <Button Content="Назад" Click="BackButton_Click"/>
         </StackPanel>
