--- a/Views/AdminWindow.xaml
+++ b/Views/AdminWindow.xaml
@@ -1,26 +1,37 @@
-﻿<!-- File: Zoomag/Views/AdminWindow.xaml -->
-<Window x:Class="Zoomag.Views.AdminWindow"
+﻿<Window x:Class="Zoomag.Views.AdminWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="AdminWindow" Height="500" Width="700">
+        Title="Админка — Zoomag" Height="550" Width="800"
+        WindowStartupLocation="CenterScreen">
     <ScrollViewer>
-        <StackPanel Margin="15">
-           
+        <StackPanel Margin="20">
             
-            <GroupBox Header="Основные действия" Margin="5" Padding="10">
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                    <Button Content="Привоз" Margin="0,0,10,0" Click="ShowArrival" />
-                    <Button Content="Продажа" Margin="0,0,10,0" Click="ShowSale" />
-                    <Button Content="Склад" Margin="0,0,10,0" Click="ShowStock" />
-                    <Button Content="Редактор товаров" Click="OpenProductEditor" />
-                    <Button Content="Редактор категорий" Click="OpenCategoriesEditor" />
-                    <Button Content="Редактор единиц" Click="OpenUnitsEditor" />
-                    <Button Content="Отчеты" Margin="0,0,10,0" Click="ShowReports" />
+            <!-- 🔹 Справочники -->
+            <GroupBox Header="Справочники" Padding="15">
+                <StackPanel Orientation="Horizontal">
+                    <Button Content="Товары" Width="120" Height="36" Margin="0,0,10,0" Click="OpenProductEditor" />
+                    <Button Content="Категории" Width="120" Height="36" Margin="0,0,10,0" Click="OpenCategoriesEditor" />
+                    <Button Content="Ед. изм." Width="120" Height="36" Margin="0,0,0,0" Click="OpenUnitsEditor" />
                 </StackPanel>
             </GroupBox>
+
+            <GroupBox Header="Операции" Padding="15">
+                <StackPanel Orientation="Horizontal">
+                    <Button Content="Привоз" Width="120" Height="36" Margin="0,0,10,0" Click="ShowArrival" />
+                    <Button Content="Продажа" Width="120" Height="36" Margin="0,0,10,0" Click="ShowSale" />
+                    <Button Content="Склад" Width="120" Height="36" Margin="0,0,0,0" Click="ShowStock" />
+                </StackPanel>
+            </GroupBox>
+
+            <GroupBox Header="Отчёты" Padding="15">
+                <StackPanel Orientation="Horizontal">
+                    <Button Content="Все отчёты" Width="120" Height="36" Margin="0,0,0,0" Click="ShowReports" />
+                </StackPanel>
+            </GroupBox>
+
+            <StackPanel HorizontalAlignment="Right" Margin="0,20,0,0">
+                <Button Content="Выйти" Width="100" Height="36" Click="Logout" />
+            </StackPanel>
         </StackPanel>
     </ScrollViewer>
 </Window>
