--- a/Views/SellerWindow.xaml
+++ b/Views/SellerWindow.xaml
@@ -11,7 +11,7 @@
             <TextBlock Text="Панель продавца" FontSize="24" FontWeight="Bold"
                        Margin="0,0,0,30" HorizontalAlignment="Center" />
             <Button Content="Продажа" Height="40" Margin="0,0,0,10" Click="ShowSale" />
-            <Button Content="Каталог товаров" Height="40" Margin="0,0,0,10" Click="ShowProductOverview" />
+            <Button Content="Каталог товаров" Height="40" Margin="0,0,0,10" Click="ShowProducts" />
             <Button Content="Склад" Height="40" Margin="0,0,0,10" Click="ShowStock" />
         </StackPanel>
     </Grid>
