--- a/Views/StockWindow.xaml
+++ b/Views/StockWindow.xaml
@@ -1,78 +1,56 @@
 ﻿<Window x:Class="Zoomag.Views.StockWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="StockWindow" Height="450" Width="1010">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
+        Title="Склад" Height="650" Width="1000"
+        WindowStartupLocation="CenterScreen">
+    <Grid Margin="15">
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <!-- Таблица: Список товаров по имени -->
-        <DataGrid x:Name="ProductNameGrid"
+
+        <!-- Фильтры -->
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,10">
+            <TextBlock Text="Поиск по названию:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+            <TextBox x:Name="SearchBox" Width="200" Margin="0,0,15,0" TextChanged="OnFilterChanged"/>
+
+            <TextBlock Text="Категория:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+            <ComboBox x:Name="CategoryFilter" MinWidth="150" Margin="0,0,15,0" SelectionChanged="OnFilterChanged">
+                <ComboBoxItem Content="Все категории" Tag="-1"/>
+            </ComboBox>
+
+            <Button Content="Обновить" Click="RefreshData" Width="100"/>
+        </StackPanel>
+
+        <!-- Таблица остатков -->
+        <DataGrid x:Name="StockGrid"
+                  Grid.Row="1"
                   AutoGenerateColumns="False"
-                  ItemsSource="{Binding Product}"
-                  Grid.Column="0"
-                  Grid.Row="0"
-                  Grid.ColumnSpan="2"
-                  Grid.RowSpan="4">
+                  IsReadOnly="True"
+                  CanUserAddRows="False"
+                  HeadersVisibility="Column"
+                  GridLinesVisibility="Horizontal"
+                  SelectionUnit="FullRow">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Наименование"
-                                    Binding="{Binding Path=Name}"
-                                    Width="200" />
-                <DataGridTextColumn Header="Цена"
-                                    Binding="{Binding Path=Price}"
-                                    Width="200" />
+                <DataGridTextColumn Header="Наименование" Binding="{Binding Name}" Width="*"/>
+                <DataGridTextColumn Header="Категория" Binding="{Binding Category.Name}" Width="150"/>
+                <DataGridTextColumn Header="Ед. изм." Binding="{Binding Unit.Name}" Width="100"/>
+                <DataGridTextColumn Header="Цена" Binding="{Binding Price}" Width="80"/>
+                <DataGridTextColumn Header="Остаток" Binding="{Binding Amount}" Width="80"/>
+                <DataGridTextColumn Header="Сумма" Binding="{Binding TotalValue}" Width="100"/>
             </DataGrid.Columns>
         </DataGrid>
-        <!-- Таблица: Детали товаров -->
-        <DataGrid x:Name="ProductDetailsGrid"
-                  AutoGenerateColumns="False"
-                  ItemsSource="{Binding Product}"
-                  Grid.Column="3"
-                  Grid.Row="0"
-                  Grid.ColumnSpan="2"
-                  Grid.RowSpan="4">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Название"
-                                    Binding="{Binding Path=Name}"
-                                    Width="200" />
-                <DataGridTextColumn Header="Ед/изм"
-                                    Binding="{Binding Path=Unit.Name}"
-                                    Width="200" />
-                <DataGridTextColumn Header="Категория"
-                                    Binding="{Binding Path=Category.Name}"
-                                    Width="200" />
-                <DataGridTextColumn Header="Цена"
-                                    Binding="{Binding Path=Price}"
-                                    Width="200" />
-                <DataGridTextColumn Header="Количество"
-                                    Binding="{Binding Path=Qty}"
-                                    Width="200" />
-            </DataGrid.Columns>
-        </DataGrid>
-        <Button Grid.Row="2"
-                Grid.Column="2"
-                x:Name="BackButton"
-                Content="Назад"
-                Grid.RowSpan="2"
-                Click="GoToAdmin" />
-        <Button Grid.Row="0"
-                Grid.Column="2"
-                x:Name="LoadDetailsButton"
-                Content="Заполнить таблицу"
-                Grid.RowSpan="2"
-                Click="LoadProductDetails" />
+
+        <!-- Итоговая строка -->
+        <Border Grid.Row="2" Padding="10" Background="#f5f6fa" Margin="0,10,0,0">
+            <TextBlock x:Name="TotalSummaryText" FontSize="14" FontWeight="Bold" HorizontalAlignment="Right"/>
+        </Border>
+
+        <!-- Управление -->
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+            <Button Content="Назад" Click="GoToAdmin" Width="100"/>
+        </StackPanel>
     </Grid>
 </Window>
