--- a/Views/AdminWindow.xaml
+++ b/Views/AdminWindow.xaml
@@ -5,7 +5,12 @@
         WindowStartupLocation="CenterScreen">
     <ScrollViewer>
         <StackPanel Margin="20">
-            
+            <TextBlock Text="Окно администратора"
+                       FontSize="24"
+                       FontWeight="Bold"
+                       HorizontalAlignment="Center"
+                       Margin="0,0,0,20" />
+
             <GroupBox Header="Справочники" Padding="15">
                 <StackPanel Orientation="Horizontal">
                     <Button Content="Товары" Width="120" Height="36" Margin="0,0,10,0" Click="OpenProductEditor" />
