--- a/Views/SellerWindow.xaml
+++ b/Views/SellerWindow.xaml
@@ -4,15 +4,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
-        Title="Окно продавца" Height="350" Width="450"
+        Title="Окно продавца" Height="400" Width="450"
         WindowStartupLocation="CenterScreen">
     <Grid Margin="30">
         <StackPanel>
-            <TextBlock Text="Панель продавца" FontSize="24" FontWeight="Bold"
+            <TextBlock Text="Окно продавца" FontSize="24" FontWeight="Bold"
                        Margin="0,0,0,30" HorizontalAlignment="Center" />
             <Button Content="Продажа" Height="40" Margin="0,0,0,10" Click="ShowSale" />
             <Button Content="Каталог товаров" Height="40" Margin="0,0,0,10" Click="ShowProducts" />
             <Button Content="Склад" Height="40" Margin="0,0,0,10" Click="ShowStock" />
+            <Button Content="Выйти" Height="40" Margin="0,30,0,0" Click="Logout" />
         </StackPanel>
     </Grid>
 </Window>
