--- a/Views/ArrivalWindow.xaml
+++ b/Views/ArrivalWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zoomag.Views"
         xmlns:system="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
         Title="Привоз" Height="600" Width="1000"
@@ -45,37 +44,11 @@
                   SelectionUnit="FullRow"
                   Margin="0,0,0,10">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Наименование"
-                                    Binding="{Binding Path=Name}"
-                                    Width="Auto" MinWidth="150" />
-                <DataGridTemplateColumn Header="Ед/изм" Width="Auto" MinWidth="80">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <ComboBox
-                                ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=local:ArrivalWindow}, Path=DataContext.UnitsList}"
-                                SelectedValue="{Binding Path=Unit.Id, Mode=TwoWay}"
-                                SelectedValuePath="Id"
-                                DisplayMemberPath="Name" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTemplateColumn Header="Категория" Width="Auto" MinWidth="100">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <ComboBox
-                                ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=local:ArrivalWindow}, Path=DataContext.CategoriesList}"
-                                SelectedValue="{Binding Path=Category.Id, Mode=TwoWay}"
-                                SelectedValuePath="Id"
-                                DisplayMemberPath="Name" />
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-                <DataGridTextColumn Header="Кол-во"
-                                    Binding="{Binding Path=Quantity}"
-                                    Width="Auto" MinWidth="60" />
-                <DataGridTextColumn Header="Цена"
-                                    Binding="{Binding Path=Price}"
-                                    Width="Auto" MinWidth="70" />
+                <DataGridTextColumn Header="Категория" Binding="{Binding CategoryName}" Width="120" />
+                <DataGridTextColumn Header="Наименование" Binding="{Binding Name}" Width="*" />
+                <DataGridTextColumn Header="Ед/изм" Binding="{Binding UnitName}" Width="80" />
+                <DataGridTextColumn Header="Кол-во" Binding="{Binding Quantity}" Width="80" />
+                <DataGridTextColumn Header="Цена" Binding="{Binding Price}" Width="80" />
             </DataGrid.Columns>
         </DataGrid>
 
