--- a/Views/SaleWindow.xaml
+++ b/Views/SaleWindow.xaml
@@ -9,16 +9,15 @@
         Width="1200"
         MinHeight="600"
         MinWidth="1000"
-        WindowState="Normal"
         WindowStartupLocation="CenterScreen">
     <Grid Margin="15">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />       
-            <RowDefinition Height="Auto" />       
-            <RowDefinition Height="*" />         
-            <RowDefinition Height="Auto" />     
-            <RowDefinition Height="Auto" />    
-            <RowDefinition Height="Auto" />   
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0"
@@ -48,7 +47,6 @@
                              TextChanged="SearchInput_TextChanged" />
                 </StackPanel>
                 <Button Grid.Column="1"
-                        x:Name="RefreshButton"
                         Content="Очистить поиск"
                         Click="RefreshProductList"
                         Height="35"
@@ -76,7 +74,7 @@
                                     Binding="{Binding UnitName}"
                                     Width="80" />
                 <DataGridTextColumn Header="Цена"
-                                    Binding="{Binding Price, StringFormat={}{0:F0}}"
+                                    Binding="{Binding Price}"
                                     Width="100" />
                 <DataGridTextColumn Header="Остаток"
                                     Binding="{Binding Qty}"
@@ -116,17 +114,14 @@
                                VerticalAlignment="Center" />
                 </StackPanel>
                 <Button Grid.Column="2"
-                        x:Name="ClearReceiptButton"
                         Content="Очистить чек"
                         Click="ClearCurrentReceipt"
                         Height="35"
                         Margin="0,0,5,0" />
                 <Button Grid.Column="3"
-                        x:Name="AddToReceiptButton"
                         Content="Добавить в чек"
                         Click="AddSelectedProductToReceipt"
-                        Height="35"
-                        Foreground="White" />
+                        Height="35" />
             </Grid>
         </Border>
 
@@ -143,13 +138,14 @@
                                     Binding="{Binding Name}"
                                     Width="*" />
                 <DataGridTextColumn Header="Цена"
-                                    Binding="{Binding Price, StringFormat={}{0:F0}}"
+                                    Binding="{Binding Price}"
                                     Width="100" />
+                <!-- ВАЖНО: добавлен UpdateSourceTrigger -->
                 <DataGridTextColumn Header="Кол-во"
-                                    Binding="{Binding Quantity}"
+                                    Binding="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}"
                                     Width="80" />
                 <DataGridTextColumn Header="Сумма"
-                                    Binding="{Binding Total, StringFormat={}{0:F0}}"
+                                    Binding="{Binding Total}"
                                     Width="100" />
                 <DataGridTemplateColumn Header="Действия" Width="100">
                     <DataGridTemplateColumn.CellTemplate>
@@ -168,14 +164,12 @@
                     Orientation="Horizontal"
                     HorizontalAlignment="Right"
                     Margin="0,10,0,0">
-            <Button x:Name="FinalizeSaleButton"
-                    Content="Оформить продажу"
+            <Button Content="Оформить продажу"
                     Click="FinalizeCurrentSale"
                     Height="45"
                     Padding="30,10"
                     Margin="0,0,10,0" />
-            <Button x:Name="BackToMainMenuButton"
-                    Content="Назад"
+            <Button Content="Назад"
                     Click="ReturnToMainMenu"
                     Height="45"
                     Padding="30,10" />
